Changes in vesion 2.2.6
+ Bug Fixes
   - createNetworkFromDataFrame and .edgeNameToSuids -- #41 multigraph support
   - BiocCheck errors and warnings -- #42
+ Doc Fixes
    - added tests for multigraphs
Changes in vesion 2.2.5
+ Bug Fixes
   - createXXXFilter and applyFilter -- #40 network arg 
+ Doc Fixes
   - new filters vignette
Changes in vesion 2.2.4
+ Doc Fixes
   - vignettes
Changes in vesion 2.2.3
+ Doc Fixes
   - vignettes
Changes in vesion 2.2.2
+ Doc Fixes
   - new custom graphics vignette
Changes in vesion 2.2.1
+ Doc Fixes
   - vignettes, readme and test
Changes in vesion 2.2.0
+ New functions to remove duplicate edges
  - deleteDuplicateEdges
  - deleteSelfLoops
+ New node selection function
  - selectNodesConnectedBySelectedEdges
+ New visual style management functions
  - importVisualStyles
  - deleteVisualStyle
  - deleteStyleMapping
+ New edge bundling function
  - bundleEdges
+ New custom graphics options for nodes
  - setNodeCustomBarChart
  - setNodeCustomBoxChart
  - setNodeCustomHeatMapChart
  - setNodeCustomLineChart
  - setNodeCustomPieChart
  - setNodeCustomRingChart
  - setNodeCustomLinearGradient
  - setNodeCustomRadialGradient
  - setNodeCustomPosition
  - removeNodeCustomGraphics
+ New filter functions
  - applyFilter
  - createColumnFilter
  - createCompositeFilter
  - createDegreeFilter
  - getFilterList
  - exportFilters
  - importFilters
+ Improved speed on bulk node and edge property bypasses
+ Bug Fixes
  - selectEdgesConnectingSelectedNodes -- set default by.col = 'name'
  - setEdgeLineWidthMapping -- fixes input type
  - getGroupInfo -- works without collapsing first
  - getTableColumns -- work with List type columns
+ For Developers
  - Updated many functions to properly pass the base.url parameter to functions like getNetworkSuid. Please be aware and vigilent about this with future development.
  - Adopted use of seq_len(). Please be aware and vigilent.
  - Replaced all but one case of sapply() with vapply().
+ Deprecated