@@ -3,10 +3,10 @@ Type: Package
 Title: Functions to Access and Control Cytoscape
 Version: 2.3.6
 Date: 2018-11-28
-Author: Alexander Pico, Tanja Muetze, Georgi Kolishovski, Paul Shannon
+Author: Alexander Pico, Tanja Muetze, Ruth Isserlin, Shraddha Pai, Julia Gustavsen, Georgi Kolishovski, Paul Shannon
 Maintainer: Alexander Pico <alex.pico@gladstone.ucsf.edu>, Tanja Muetze <tanja.muetze14@alumni.imperial.ac.uk>, Paul Shannon <pshannon@systemsbiology.org> 
 Depends: R (>= 3.5)
-Imports: httr, methods, RJSONIO, XML, utils, BiocGenerics, igraph, stats, graph
+Imports: httr, methods, RJSONIO, XML, utils, BiocGenerics, igraph, stats, graph, R.utils
 Suggests: RUnit, RColorBrewer, BiocStyle, knitr, rmarkdown
 SystemRequirements: Cytoscape (>= 3.7.0), CyREST (>= 3.8.0)
 Description: Vizualize, analyze and explore networks using Cytoscape via R.
