@@ -7,7 +7,9 @@
 saveSession(filename = NULL, base.url = .defaultBaseUrl)
 }
 \arguments{
-\item{filename}{The path and name of the session file to save}
+\item{filename}{Full path or path relavtive to current working directory, 
+in addition to the name of the file. The \code{.cys} extension is 
+automatically added.}
 
 \item{base.url}{(optional) Ignore unless you need to specify a custom domain,
 port or version to connect to the CyREST API. Default is http://localhost:1234
